Update new Project custom Grid 24 col

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "classfunc-mgrid",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/ClassFunc",
+  "author": "Tuan Nguyen",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
