--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "classfunc_grid_24_col",
+  "name": "grid_24_col",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://github.com/ClassFunc/Classfunc_Grid_24_col",
+  "private": false,
+  "description": "Repair the Material-ui design grid framework works on a 24 column grid system",
+  "license": "UNLICENSED",
+  "keywords": [
+    "classfunc",
+    "classfunc_grid_24_col"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ClassFunc/Classfunc_Grid_24_col.git"
+  },
   "author": "Tuan Nguyen",
   "dependencies": {
+    "@babel/runtime": "^7.2.0",
     "@material-ui/core": "^3.8.1",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "webpack": "^4.28.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack --watch",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -24,5 +37,19 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "webpack-cli": "^3.2.1"
+  },
+  "bugs": {
+    "url": "https://github.com/ClassFunc/Classfunc_Grid_24_col/issues"
+  },
+  "homepage": "https://github.com/ClassFunc/Classfunc_Grid_24_col#readme",
+  "main": "webpack.config.js"
 }
