--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grid_24_col",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "private": false,
   "description": "Repair the Material-ui design grid framework works on a 24 column grid system",
   "license": "UNLICENSED",
@@ -17,15 +17,15 @@
     "@babel/runtime": "^7.2.0",
     "@material-ui/core": "^3.8.1",
     "classnames": "^2.2.6",
+    "post-loader": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "webpack": "^4.28.3"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,10 +41,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "8.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.0",
     "webpack-cli": "^3.2.1"
   },
   "bugs": {
